# DSA_TPs

./: .gitignore  CMakeLists.txt  README.md
Exams/22-23-1st/: sol.c
Exams/23-24-1st/: sol.c
Exams/24-25-1st/: 24-25-1st-eng-v2.docx  sol.c
TP/1- LinkedList I/: TP1.c  ex1-mergeSortedList.c  ex2-reverseInPlace.c
TP/1-LinkedList Revision I/: ex3-removeDuplicates.c  lab1.docx
TP/10_HashTable_I/: TP10.c
TP/1_LinkedList_I/: TP1.c
TP/2- LinkedList II/: ex1-intersection.c  ex5-addTwoNumbers.c
TP/2-LinkedList Revision II/: ex2-partitions.c  ex3-detectCycle.c  ex4-rotateByK.c  lab2.docx
TP/2_LinkedList_II/: TP2.c
TP/3_Stack_I/: TP3.c  TP3.docx
TP/4- BinaryTree I/: bt.c  exercises.c
TP/4_BinaryTree_I/: test.c
TP/4_Stack_II/: TP4.c  TP4.docx
TP/5_Queue_I/: TP5.c  TP5.docx
TP/6_BinaryTree_I/: TP6.c  TP6.docx
TP/7_BinaryTree_II/: TP7.c  TP7.docx
TP/8_BinarySearchTree_I/: TP8.c  TP8.docx
TP/9_SortSeach_I/: TP9.c  TP9.docx  skeleton.c
src/: dsa.h
src/BinarySearchTree/: BST.c  BST.h  DEF_BST.h
src/BinaryTree/: BT.c  BT.h  DEF_BT.h
src/Heap/: DEF_HEAP.h  HEAP.c  HEAP.h  TEST_HEAP.c
src/Queue/dynamic/: DEF_QUEUE.h  QUEUE.c  Queue.h  TEST_QUEUE.c
src/Queue/static/: DEF_QUEUE.h  QUEUE.c  Queue.h  TEST_QUEUE.c
src/SinglyLinkedList/: DEF_SLL.h  SLL.c  SLL.h  TEST_SLL.c
src/Sorting/: SORTING.c  SORTING.h
src/Stack/dynamic/: DEF_STACK.h  STACK.h  TEST_STACK.c  stack.c
src/Stack/static/: DEF_STACK.h  STACK.h  TEST_STACK.c  stack.c
